# pgify

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure.in  libtool  main.c  mysql.g  mysql.tokens  mysqlLexer.c  mysqlLexer.h  mysqlParser.h  pgify.1  pgify.c  pgify.h  pgify.info  pgify.lsm.in  pgify.pc.in  pgify.spec.in  pgify.texinfo  system.h  topg.g  xmalloc.c
test/: error  expected  input  testSimple.sh  testbackquote.sh  testcomment.sh  testcommon.sh  testconcatws.sh  testcreatedatabase.sh  testcreatetablefulltextindex.sh  testcreatetableindex.sh  testcreatetablelike.sh  testdate.sh  testenum.sh  testfoundrows.sh  testfunction.sh  testifnull.sh  testinnerjoin.sh  testinterval.sh  testlock.sh  testmerge.sh  testmultiplevalues.sh  testnullif.sh  testoffset.sh  testonupdate.sh  testpassthroughtable.sh  testquote.sh  testreserved.sh  testschema.sh  testselectcondition.sh  testshowcolumns.sh  testshowdatabases.sh  testshowtables.sh  testsimpledrop.sh  teststupiddate.sh  testuse.sh  testvariable.sh  testwpterms.sh
